tests/ui/instant_now.stderr
error: nondeterministic workflow API detected; use durust::now instead
 --> tests/ui/instant_now.rs:5:10
  |
5 | async fn bad(_: BadInput) -> durust::Result<()> {
  |          ^^^
